--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "symfony/finder": "2.*",
         "symfony/dom-crawler": "2.*",
         "symfony/css-selector": "2.*",
-        "atoum/atoum": "@stable",
+        "atoum/atoum": "1.*",
         "fzaninotto/faker": "1.*"
     },
     "require-dev": {
